# coffee_shop_api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start_app.sh  start_celery.sh
migrations/: env.py
migrations/versions/: 7d8904ccdbc1_initial.py
src/: main.py
src/application/dto/: auth.py  user.py
src/application/services/: auth_service.py  user_service.py
src/configs/: celery_beat.py  database.py  jwt.py  mail_settings.py  redis.py  server.py
src/domain/: exceptions.py
src/domain/entities/: base.py  user.py  verification.py
src/domain/interfaces/: uow.py  user_repo.py  verification_repo.py
src/domain/ports/: authorization_policies.py  authorizer.py  current_user.py  password_hasher.py  token_provider.py
src/domain/value_objects/: email_address.py  verification_channel.py
src/infrastructure/db/: base.py  mixins.py  uow.py
src/infrastructure/db/models/: __init__.py  user.py  verification.py
src/infrastructure/db/repositories/: user_repo.py  verification_repository.py
src/infrastructure/fastapi/: app.py
src/infrastructure/logger/: logger.py
src/infrastructure/notifications/: mailer.py
src/infrastructure/security/: argon2_password_hasher.py  jwt_token_provider.py
src/infrastructure/tasks/: celery_app.py  cleanup.py
src/ui/: errors.py
src/ui/api/: deps.py  responses.py
src/ui/api/routers/: auth.py  users.py
src/ui/schemas/: error.py
