[project]
name = "coffee-shop-users"
version = "0.1.0"
description = "Coffee Shop API - Users module (FastAPI, async, DDD, JWT)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pydantic>=2.8",
  "argon2-cffi>=23.1",
  "alembic>=1.13",
  "celery>=5.4",
  "redis>=5.0",
  "pyjwt>=2.10.1",
  "pydantic-settings>=2.10.1",
  "psycopg2-binary>=2.9.10",
  "aiosmtplib>=4.0.2",
  "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4.4",
  "pre-commit>=3.8",
  "types-redis",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

# --------------------------
# Ruff (lint + format)
# --------------------------
[tool.ruff]
target-version = "py312"
line-length = 125
fix = true
unsafe-fixes = false
exclude = [
  "migrations",
  ".venv",
]

[tool.ruff.lint]
# Enable common rule sets
select = [
  "E", "W",     # pycodestyle
  "F",          # pyflakes
  "I",          # isort
  "UP",         # pyupgrade
  "B",          # bugbear
  "C90",        # mccabe
  "N",          # pep8-naming
  "ASYNC",      # flake8-async
  "ANN",        # annotations (по желанию)
]
ignore = [
  "ANN101", "ANN102",  # self / cls annotations not required
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
